tests/errors/generic_type_args_on_nongeneric.dang
# Type arguments applied to a non-generic type

pub b: String[Int!]! = "hello"
